[FIX] style, add scroll overflow

--- a/activity_dashboard_mngmnt/static/src/css/style.scss
+++ b/activity_dashboard_mngmnt/static/src/css/style.scss
@@ -1,3 +1,6 @@
+.o_action_manager {
+  overflow: scroll !important;
+}
 .activity-dashboard-card {
     border-radius: 0.3rem;
     display: flex;
